--- a/circle/9.10.4.2/chord.tex
+++ b/circle/9.10.4.2/chord.tex
@@ -114,9 +114,11 @@ Obtain the point of intersection of line $\vec{PQ}$,$\vec{RS}$
 \end{align}
 From the Result of python code by sunstituting $\theta_1,\theta_2,\theta_3,\theta_4$ in point $\vec{T}$ then we got the point of intersection as :
 \begin{align}
-\vec{T}&=\myvec{\sin{\theta_2}-\sin{\theta_1}&\cos{\theta_2}-\cos{\theta_1}\\\sin{\theta_4}-\sin{\theta_3}&\cos{\theta_4}-\cos{\theta_3}}\vec{X}=\myvec{\cos{\theta_1}(\sin{\theta_2}-\sin{\theta_1})-\sin{\theta_1}(\cos{\theta_2}-\cos{\theta_1})\\\cos\theta_3(\sin\theta_4-\sin\theta_3)-\sin\theta_3(\cos\theta_4-\cos\theta_2)}\\
-&=\myvec{\frac{\cos{\theta_4}-\cos{\theta_2}(\sin{\theta2}\cos{\theta_1}-\sin{\theta_1}\cos{\theta_2})}{(\cos{\theta_4}-\cos{\theta_2})(\sin{\theta_2}-\sin{\theta_1})-(\cos{\theta_2}-\cos{\theta_1})(\sin{\theta_4}-\sin{\theta_3})}\\[8pt]\sin{\theta_1}+\frac{\sin{\theta_2}-\sin{\theta_1}}{\cos{\theta_2}-\cos{\theta_1}}(\frac{\cos{\theta_4}-\cos{\theta_2}(\sin{\theta2}\cos{\theta_1}-\sin{\theta_1}\cos{\theta_2})}{(\cos{\theta_4}-\cos{\theta_2})(\sin{\theta_2}-\sin{\theta_1})-(\cos{\theta_2}-\cos{\theta_1})(\sin{\theta_4}-\sin{\theta_3})})-\cos{\theta_1})}\\
-&=\myvec{0.68341409\\-0.04288508}
+\myvec{\sin{\theta_2}-\sin{\theta_1}&\cos{\theta_2}-\cos{\theta_1}\\\sin{\theta_4}-\sin{\theta_3}&\cos{\theta_4}-\cos{\theta_3}}\vec{X}=\myvec{\cos{\theta_1}(\sin{\theta_2}-\sin{\theta_1})-\sin{\theta_1}(\cos{\theta_2}-\cos{\theta_1})\\\cos\theta_3(\sin\theta_4-\sin\theta_3)-\sin\theta_3(\cos\theta_4-\cos\theta_2)}\\
+\vec{T}=\myvec{\frac{\cos{\theta_4}-\cos{\theta_2}(\sin{\theta2}\cos{\theta_1}-\sin{\theta_1}\cos{\theta_2})}{(\cos{\theta_4}-\cos{\theta_2})(\sin{\theta_2}-\sin{\theta_1})-(\cos{\theta_2}-\cos{\theta_1})(\sin{\theta_4}-\sin{\theta_3})}\\[8pt]\sin{\theta_1}+\frac{\sin{\theta_2}-\sin{\theta_1}}{\cos{\theta_2}-\cos{\theta_1}}(\frac{\cos{\theta_4}-\cos{\theta_2}(\sin{\theta2}\cos{\theta_1}-\sin{\theta_1}\cos{\theta_2})}{(\cos{\theta_4}-\cos{\theta_2})(\sin{\theta_2}-\sin{\theta_1})-(\cos{\theta_2}-\cos{\theta_1})(\sin{\theta_4}-\sin{\theta_3})})-\cos{\theta_1})}
+\end{align}
+\begin{align}
+\vec{T}=\myvec{0.68341409\\-0.04288508}
 \end{align}
 From the Result of python code , we get
 \begin{align}
