--- a/circle/9.10.4.2/chord.tex
+++ b/circle/9.10.4.2/chord.tex
@@ -90,7 +90,7 @@ So, here
 	\implies\sin\frac{\theta_1-\theta_2}{2}&=\frac{d}{2}\\
 \implies\myvec{\frac{\theta_1-\theta_2}{2}}&=\sin^{-1}(\frac{d}{2})\label{12}
 	\end{align}
-	Substituing the values from table $\eqref{table}$ in $\eqref{12}$ So we get
+	Substituting the values from table $\eqref{table}$ in $\eqref{12}$ So we get
 	\begin{align}
 	\myvec{\theta_1-\theta_2}&=97.1806\degree
 	\end{align}
