--- a/circle/9.10.4.2/table/table.tex
+++ b/circle/9.10.4.2/table/table.tex
@@ -231,7 +231,7 @@
 \\
 \hhline{|---|~}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\centering}\gnumbox{$\vec{\theta_1}$}}
+	{\gnumericPB{\centering}\gnumbox{$\theta_1$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{$30\degree$}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
@@ -240,7 +240,7 @@
 \\
 \hhline{|---|~}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\centering}\gnumbox{$\vec{\theta_3}$}}
+	{\gnumericPB{\centering}\gnumbox{$\theta_3$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{$60\degree$}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
@@ -249,7 +249,7 @@
 \\
 \hhline{|---|~}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\centering}\gnumbox{$\vec{\theta_2}$}}
+	{\gnumericPB{\centering}\gnumbox{$\theta_2$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{$-67.1806\degree$}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
@@ -258,7 +258,7 @@
 \\
 \hhline{|---|~}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\centering}\gnumbox{$\vec{\theta_4}$}}
+	{\gnumericPB{\centering}\gnumbox{$\theta_4$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{$37.1806\degree$}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
