--- a/circle/9.10.4.2/chord.tex
+++ b/circle/9.10.4.2/chord.tex
@@ -83,25 +83,25 @@ So, here
 \norm{\vec{P}-\vec{Q}}^2&=d^2
 \end{align}
 		\begin{align}
-	\implies\myvec{\cos \theta_1-\cos \theta_2}^2+\myvec{\sin \theta_1-\sin \theta_2}^2&=d^2\\
-	\implies2-2\myvec{\cos(\theta_1-\theta_2)}&=d^2\\
-	\implies2(2\myvec{{\sin^2}(\frac{\theta_1-\theta_2}{2})}&=d^2\\
-	\implies\sin^2(\frac{\theta_1-\theta_2}{2})&=\frac{d^2}{4}\\
-	\implies\sin\frac{\theta_1-\theta_2}{2}&=\frac{d}{2}\\
-\implies\myvec{\frac{\theta_1-\theta_2}{2}}&=\sin^{-1}(\frac{d}{2})\label{12}
+	&\implies\brak{\cos \theta_1-\cos \theta_2}^2+\brak{\sin \theta_1-\sin \theta_2}^2=d^2\\
+	&\implies2-2\brak{\cos\brak{\theta_1-\theta_2}}=d^2\\
+	&\implies2\brak{2\brak{{\sin^2}\brak{\frac{\theta_1-\theta_2}{2}}}}=d^2\\
+	&\implies\sin^2\brak{\frac{\theta_1-\theta_2}{2}}=\frac{d^2}{4}\\
+	&\implies\sin\brak{\frac{\theta_1-\theta_2}{2}}=\frac{d}{2}\\
+&\implies\brak{\frac{\theta_1-\theta_2}{2}}=\sin^{-1}\brak{\frac{d}{2}}\label{12}
 	\end{align}
 	Substituting the values from table $\eqref{table}$ in $\eqref{12}$ So we get
 	\begin{align}
-	\myvec{\theta_1-\theta_2}&=97.1806\degree
+	\brak{\theta_1-\theta_2}&=97.1806\degree
 	\end{align}
 Simillary we can say that
 \begin{align}
-	\myvec{\theta_3-\theta_4}&=97.1806\degree 		       
+	\brak{\theta_3-\theta_4}&=97.1806\degree 		       
 \end{align}
-Obtain the point of intersection of line $\vec{PQ}$,$\vec{RS}$
+Obtain the point of intersection of line $PQ,RS$
 \begin{align}
-\vec{{n}_1^{\top}}(\vec{X}-\vec{P})&=0\\
-\vec{{n}_2^{\top}}(\vec{X}-\vec{R})&=0\\
+\vec{{n}_1^{\top}}\brak{\vec{X}-\vec{P}}&=0\\
+\vec{{n}_2^{\top}}\brak{\vec{X}-\vec{R}}&=0\\
 \vec{Omat}&=\myvec{0&1\\-1&0}\\
 \vec{n}_1&=\myvec{0&1\\-1&0}\myvec{\cos \theta_1-\cos \theta_2\\\sin \theta_1-\sin \theta_2}\\
 &=\myvec{\sin \theta_1-\sin \theta_2\\\cos \theta_2-\cos \theta_1}\\
@@ -110,10 +110,10 @@ Obtain the point of intersection of line $\vec{PQ}$,$\vec{RS}$
 \end{align}
 From the Result of python code by substituting $\theta_1,\theta_2,\theta_3,\theta_4$ in point $\vec{T}$ then we get the point of intersection as :
 \begin{multline}
-\myvec{\sin \theta_2-\sin \theta_1&\cos \theta_2-\cos \theta_1\\\sin \theta_4-\sin \theta_3&\cos \theta_4-\cos \theta_3}\vec{X}=\myvec{\cos \theta_1(\sin \theta_2-\sin \theta_1)-\sin \theta_1(\cos \theta_2-\cos \theta_1)\\\cos \theta_3(\sin \theta_4-\sin \theta_3)-\sin \theta_3(\cos \theta_4-\cos \theta_2)}\\
+\myvec{\sin \theta_2-\sin \theta_1&\cos \theta_2-\cos \theta_1\\\sin \theta_4-\sin \theta_3&\cos \theta_4-\cos \theta_3}\vec{X}=\myvec{\cos \theta_1\brak{\sin \theta_2-\sin \theta_1}-\sin \theta_1\brak{\cos \theta_2-\cos \theta_1}\\\cos \theta_3\brak{\sin \theta_4-\sin \theta_3}-\sin \theta_3\brak{\cos \theta_4-\cos \theta_2}}\\
 \end{multline}
 \begin{multline}
-\vec{T}=\myvec{\frac{\cos \theta_4-\cos \theta_2(\sin \theta2 \cos \theta_1-\sin \theta_1 \cos \theta_2)}{(\cos\theta_4-\cos \theta_2)(\sin \theta_2-\sin \theta_1)-(\cos \theta_2-\cos \theta_1)(\sin \theta_4-\sin \theta_3)}\\[8pt]\sin \theta_1+\frac{\sin \theta_2-\sin \theta_1}{\cos \theta_2-\cos \theta_1}(\frac{\cos \theta_4-\cos \theta_2(\sin \theta2\cos \theta_1-\sin \theta_1\cos \theta_2)}{(\cos \theta_4-\cos \theta_2)(\sin \theta_2-\sin \theta_1)-(\cos \theta_2-\cos \theta_1)(\sin \theta_4-\sin \theta_3)})-\cos \theta_1)}
+\vec{T}=\myvec{\frac{\cos \theta_4-\cos \theta_2\brak{\sin \theta2 \cos \theta_1-\sin \theta_1 \cos \theta_2}}{\brak{\cos\theta_4-\cos \theta_2}\brak{\sin \theta_2-\sin \theta_1}-\brak{\cos \theta_2-\cos \theta_1}\brak{\sin \theta_4-\sin \theta_3}}\\[8pt]\sin \theta_1+\frac{\sin \theta_2-\sin \theta_1}{\cos \theta_2-\cos \theta_1}\brak{\frac{\cos \theta_4-\cos \theta_2\brak{\sin \theta2\cos \theta_1-\sin \theta_1\cos \theta_2}}{\brak{\cos \theta_4-\cos \theta_2}\brak{\sin \theta_2-\sin \theta_1}-\brak{\cos \theta_2-\cos \theta_1}\brak{\sin \theta_4-\sin \theta_3}}}-\cos \theta_1}
 \end{multline} 	
 \begin{align}
 =\myvec{0.68341409\\-0.04288508}
