--- a/circle/9.10.4.2/chord.tex
+++ b/circle/9.10.4.2/chord.tex
@@ -113,7 +113,7 @@ From the Result of python code by substituting $\theta_1,\theta_2,\theta_3,\thet
 \myvec{\sin \theta_2-\sin \theta_1&\cos \theta_2-\cos \theta_1\\\sin \theta_4-\sin \theta_3&\cos \theta_4-\cos \theta_3}\vec{X}=\myvec{\cos \theta_1\brak{\sin \theta_2-\sin \theta_1}-\sin \theta_1\brak{\cos \theta_2-\cos \theta_1}\\\cos \theta_3\brak{\sin \theta_4-\sin \theta_3}-\sin \theta_3\brak{\cos \theta_4-\cos \theta_2}}\\
 \end{multline}
 \begin{multline}
-\vec{T}=\myvec{\frac{\cos \theta_4-\cos \theta_2\brak{\sin \theta2 \cos \theta_1-\sin \theta_1 \cos \theta_2}}{\brak{\cos\theta_4-\cos \theta_2}\brak{\sin \theta_2-\sin \theta_1}-\brak{\cos \theta_2-\cos \theta_1}\brak{\sin \theta_4-\sin \theta_3}}\\[8pt]\sin \theta_1+\frac{\sin \theta_2-\sin \theta_1}{\cos \theta_2-\cos \theta_1}\brak{\frac{\cos \theta_4-\cos \theta_2\brak{\sin \theta2\cos \theta_1-\sin \theta_1\cos \theta_2}}{\brak{\cos \theta_4-\cos \theta_2}\brak{\sin \theta_2-\sin \theta_1}-\brak{\cos \theta_2-\cos \theta_1}\brak{\sin \theta_4-\sin \theta_3}}}-\cos \theta_1}
+\vec{T}=\myvec{\frac{\cos \theta_4-\cos \theta_2\brak{\sin \theta_2 \cos \theta_1-\sin \theta_1 \cos \theta_2}}{\brak{\cos\theta_4-\cos \theta_2}\brak{\sin \theta_2-\sin \theta_1}-\brak{\cos \theta_2-\cos \theta_1}\brak{\sin \theta_4-\sin \theta_3}}\\[8pt]\sin \theta_1+\frac{\sin \theta_2-\sin \theta_1}{\cos \theta_2-\cos \theta_1}\brak{\frac{\cos \theta_4-\cos \theta_2\brak{\sin \theta_2\cos \theta_1-\sin \theta_1\cos \theta_2}}{\brak{\cos \theta_4-\cos \theta_2}\brak{\sin \theta_2-\sin \theta_1}-\brak{\cos \theta_2-\cos \theta_1}\brak{\sin \theta_4-\sin \theta_3}}}-\cos \theta_1}
 \end{multline} 	
 \begin{align}
 =\myvec{0.68341409\\-0.04288508}
