--- a/circle/9.10.4.2/chord.tex
+++ b/circle/9.10.4.2/chord.tex
@@ -78,7 +78,7 @@ Consider
 \end{eqnarray}\label{table1}
 So, here
 \begin{align}
-	\vec{P}-\vec{Q}&=\myvec{\cos\theta_1-\cos\theta_2\\{sin \theta_1}-{\sin \theta_2}}
+	\vec{P}-\vec{Q}&=\myvec{\cos\theta_1-\cos\theta_2 \\ \sin \theta_1-\sin \theta_2}
 	\\
 \norm{\vec{P}-\vec{Q}}^2&=d^2
 \end{align}
