--- a/vectors/10/7.2/6/tables/table.tex
+++ b/vectors/10/7.2/6/tables/table.tex
@@ -215,7 +215,7 @@
 	 \multicolumn{1}{|p{\gnumericColA}|}%
 	{\gnumericPB{\centering}\gnumbox{$\vec{B}$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
-	{\gnumericPB{\centering}\gnumbox{$\myvec{4\\y}$}}
+	{\gnumericPB{\centering}\gnumbox{$\myvec{4\\x}$}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
 	{\gnumericPB{\centering}\gnumbox{Second point}}
 	&
@@ -224,7 +224,7 @@
 	 \multicolumn{1}{|p{\gnumericColA}|}%
 	{\gnumericPB{\centering}\gnumbox{$\vec{C}$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
-	{\gnumericPB{\centering}\gnumbox{$\myvec{x\\6}$}}
+	{\gnumericPB{\centering}\gnumbox{$\myvec{y\\6}$}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
 	{\gnumericPB{\centering}\gnumbox{Third point}}
 	&
