--- a/vectors/10/7.2/6/para1.tex
+++ b/vectors/10/7.2/6/para1.tex
@@ -60,7 +60,7 @@ This is Problem-6 from Exercise 7.2
 \solution The input parameters for this problem are available in
 \begin{center}
 \begin{table}[ht!]
-	\input{/home/srikanth/para/tables/table.tex}
+	\input{/home/srikanth/Downloads/new pa/table/table.tex}
 \caption{}
 \label{table}	
 \end{table}
