--- a/vectors/10/7.2/6/para1.tex
+++ b/vectors/10/7.2/6/para1.tex
@@ -54,7 +54,7 @@
 This is Problem-6 from Exercise 7.2
 
 \begin{enumerate}
-\item If $\vec{A}(1, 2),\vec{B}(4, x),\vec{C}(y, 6) \text{and } \vec{D}(3, 5)$ are the vertices of a parallelogram taken in order,find x and y.
+\item If $\vec{A}(1, 2),\vec{B}(4, y),\vec{C}(x, 6) \text{and } \vec{D}(3, 5)$ are the vertices of a parallelogram taken in order,find x and y.
 \end{enumerate}
 
 \solution The input parameters for this problem are available in
